ChangeLog for the Astro project.

20190729:
	* add LD_LIBRARY_PATH so that snowstar is able to find libraries
	  (seems to be necessary for Ice-3.7.3, the current git version)

20190728:
	* add findLike to BSC
	* add star catalogs to catalogdialog

20190624:
	* add AC_OPENMP

20180514:
	* portability to Ubuntu 18.04

20180507:
	* add media path to configuration backend

20180503:
	* add retries to USB descriptor string retrieval to work around
	  problem with at90usb162 issue

20150718:
	* convert astro::camera::Exposure class to the more common conventions
	  in this project, in particular, make all members private
	* convert accessors in Binning class to our conventions

20150717:
	* Move DeviceNicer and Denicer to astro::device::nice and to the
	  main library, so that we can use network names in the main library
	* improve DeviceName class so that it understands local and network
	  device names, and can convert between them
	* add missing Mount type to the DeviceAccessor class
	* add Test for Nicer/Denicer classes

20150713:
	* fix threading issues in Avahi implementation
	* make service discover work in Linux
	* extend ServerName class to include name resolution via DNS Service
	  discovery

20150711:
	* add persistence to instruments

20150710:
	* add zeroconf stuff
	* add instruments interface

20150607:
	* add "othello" driver module for the guiderport device

20140716:
	* add serial communication class
	* add celestron driver
	* enforce device type matching name in all device constructors

20140715:
	* add Mount class

20140710:
	* add backlash compensation to FocusWork
	* add backlash to simulator (how can we get backlash information into
	  other camera/focuser combinations?)

20140703:
	* add type conversion adapter
	* add constant value adapter
	* fix MicroTouch implementation
	* Add FocusInfo and extended focus measure filters
	* move combination code to FocusWork
	* test FWHM code on real stars, seems to work, but guidance is important

20140702: