@@ -1,5 +1,5 @@
 #
-# ice.build -- build the current version of the Ice software
+# ice.install -- install the current version of the Ice software
 #
 # (c) 2018 Prof Dr Andreas Müller, Hochschule Rapperswil
 #
