@@ -3,6 +3,8 @@ ChangeLog for the Astro project.
 20190729:
 	* add LD_LIBRARY_PATH so that snowstar is able to find libraries
 	  (seems to be necessary for Ice-3.7.3, the current git version)
+	* fix build scripts
+	* add elliptical outlines from stellarium catalog
 
 20190728:
 	* add findLike to BSC
